# NexpertUVDM8.0Automation-

./: .env8bff487df19920b104a73af81a25210b881a5f4c9d84edcc1f54dd6b8e8570a7  .envgrep  .gitignore  .gitleaks-test.txt  .xrpeasy_market  2026-02-24_London_Desk.md  DEFINITIONS.txt  GLOSSARY.txt  JESSE.md  LICENSE  LIVEMORE_GUARD  LIVEMORE_GUARD   Legacy_Archive.md  Livermore_pivot_guard_auto.py  README.md  TERMUX_METHOD.md  TRIGGERS.md  UVDM_STATUS.json  WHISPERS.md  bashrc_template.sh  bitrue_wingman.py  confirm_block.txt  execute_helpers.txt  execution_log.jsonl  favorite_setup_scanner_bitrue_ftso.py  favorite_setup_scanner_bitrue_ftso_debug.py  fix_283.py  fix_bitrue_simple.py  flr_status.sh  flreasy_pivot_guard_fixed.py  index.html  jesse100.sh  jesse_quote.sh  jesse_quote_premium.sh  livermore_macd_backtest_v2.py  livermore_pivot_guard_auto.py  log_risk_hourly.py  mobile-tokens.css  mode_picker.py  patch_urllib.py  (+52 more)
NexpertUVDM-Automation/: .env  .envNEXO_API_KEY=abcdefgh12345678...EXO_API_SECRET=1234567890abcdef...  2026-02-24_London_Desk.md.save  add_50.sh  bitrue_simple.py  contacts.json  intelligent_trail.py  lambo_uvdm.py  legacy_vault.py  livermore_pivot_guard.py.save  livermore_pivot_guard_auto.py  livermore_pivot_guard_auto.py+=  nexo_boost.py  nohup.out  pyramid_add.sh  udvm_master.py  udvm_tokenizer.py  vault_save.py.save
backups/: livermore_macd_backtest_v2-20260427-080902.py  risk_log-20260427-080903.csv  xlm_mode_note-20260427-080902.py
checkpoints/: .env-checkpoint-20260713-000915  .env-checkpoint-20260713-003619
wingman/: pyproject.toml
(+177 files in other folders)
