[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wingman"
version = "0.1.0"
description = "Wingman starter vault and voice system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]
ml = [
  "scikit-learn>=1.5.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
]

[project.scripts]
wingman = "wingman.cli:main"
wingman-vault = "wingman.vault.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["wingman*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
